--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,8 +17,8 @@
         <br><br>
         <p class="forgot" (click)="forgotpassword()">Forgot password?</p>
       </div>
-      <p>Don't have an account?
-        <b (click)="signup()" class="forgot">Sign Up</b>
+      <p (click)="signup()">Don't have an account?
+        <b class="forgot">Sign Up</b>
       </p>
     </div>
   </ion-content>
