--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -4,22 +4,22 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="secondary">
+<ion-header color="seeThrough">
 
-  <ion-navbar color="secondary">
-    <ion-title align="center">Forgot Password</ion-title>
+  <ion-navbar color="seeThrough">
+    <ion-title align="center">Reset Password</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="container">
 
   <div class="theForm">
     <div class="contents">
           <p>Please enter your email address to reset your password.</p>
     <br>
-    <ion-item no-lines>
+    <ion-item no-lines  color="seeThrough">
       <ion-input class="theTXT" placeholder="Email" type="email" [(ngModel)]="obj.email"></ion-input>
     </ion-item>
     <br>
