--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -5,27 +5,22 @@
   Ionic pages and navigation.
 -->
 <ion-header color="seeThrough">
-
   <ion-navbar color="seeThrough">
     <ion-title align="center">Reset Password</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding class="container">
-
   <div class="theForm">
     <div class="contents">
-          <p>Please enter your email address to reset your password.</p>
-    <br>
-    <ion-item no-lines  color="seeThrough">
-      <ion-input class="theTXT" placeholder="Email" type="email" [(ngModel)]="obj.email"></ion-input>
-    </ion-item>
-    <br>
-    <button ion-button (click)="forgotpassword(obj)">RESET PASSWORD</button>
-
+      <p>Please enter your email address to reset your password.</p>
+      <br />
+      <form no-lines color="seeThrough">
+        <ion-input class="theTXT" name="email" #email="ngModel" type="email" placeholder="Email" ngModel required></ion-input>
+        <span *ngIf="!email.valid && email.touched" class="help-block helptext">Please make sure the field is not empty.*</span>
+      </form>
+      <br />
+      <button ion-button (click)="forgotpassword(email.value)">RESET PASSWORD</button>
     </div>
   </div>
-
 </ion-content>
