--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -6,13 +6,17 @@
 -->
 <ion-header color="seeThrough">
   <ion-navbar color="seeThrough">
-    <ion-title align="center">Reset Password</ion-title>
+    <ion-title>Reset Password</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding class="container">
   <div class="theForm">
-    <div class="contents">
+    
+      <div class="logo">
+          <img src="../../assets/imgs/theLogo/ANTZ Logo.png" alt="">
+        </div>
+    <div class="contents" padding>
       <p>Please enter your email address to reset your password.</p>
       <br />
       <form no-lines color="seeThrough">
@@ -20,7 +24,7 @@
         <span *ngIf="!email.valid && email.touched" class="help-block helptext">Please make sure the field is not empty.*</span>
       </form>
       <br />
-      <button ion-button (click)="forgotpassword(email.value)">RESET PASSWORD</button>
+      <button ion-button block (click)="forgotpassword(email.value)">Reset Password</button>
     </div>
   </div>
 </ion-content>
