--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -13,11 +13,11 @@
         <div class="textFields">
           
           <ion-input name="fName" #fName="ngModel" type="text" placeholder="Username" ngModel required></ion-input>
-          <span *ngIf="!fName.valid && fName.touched" class="help-block helptext">Please enter Username</span>
+          <span *ngIf="!fName.valid && fName.touched" class="help-block helptext">Please enter your username</span>
           <ion-input name="email" #email="ngModel" type="email" placeholder="Email" ngModel required></ion-input>
           <span *ngIf="!email.valid && email.touched" class="help-block helptext">Please enter your email</span>
           <ion-input type="password" name="password" #password="ngModel" minlength="6" placeholder="Password (min 6 char)" required ngModel></ion-input>
-          <span *ngIf="!password.valid && password.touched" class="help-block helptext">Please enter password</span>
+          <span *ngIf="!password.valid && password.touched" class="help-block helptext">Please enter your password</span>
           <!-- <span ng-if="!me.password.$valid">Password is too short</span>       -->
         </div>
       </ion-list>
